--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <jhi-main>
+ 
         <div class="app-loading">
             <div class="lds-css ng-scope">
                 <div class="lds-pacman">
@@ -106,4 +107,7 @@
         ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>-->
 </body>
+         <video autoplay loop muted poster="screenshot.jpg" id="background">
+        <source src="../../../content/video/fvbhd0226.mov" type="video/mp4">
+ </video>
 </html>
